# ai-safety-radar

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_LOG.md  LICENSE  PROJECT_STATE.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
context/: instruction.md  technical_specification.md
docs/: DEV.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_LOG.md  MATS_PORTFOLIO.md  PERFORMANCE.md  PROJECT_STATE.md  THREAT_MODEL.md
scripts/: remove_duplicates.py  setup_ollama.sh
src/ai_safety_radar/: config.py
src/ai_safety_radar/agents/: __init__.py  critic_agent.py  curator_agent.py  extraction_agent.py  filter_agent.py  filter_logic.py
src/ai_safety_radar/dashboard/: app.py
src/ai_safety_radar/dashboard/.streamlit/: config.toml
src/ai_safety_radar/ingestion/: __init__.py  arxiv.py  base.py
src/ai_safety_radar/models/: __init__.py  raw_document.py  threat_signature.py
src/ai_safety_radar/orchestration/: __init__.py  editorial_graph.py  ingestion_graph.py
src/ai_safety_radar/persistence/: dataset_manager.py
src/ai_safety_radar/scripts/: backfill_once.py  publish_to_hf.py  run_agent_core.py  run_automation.sh  run_ingestion_service.py  run_pipeline.py  update_readme.py
src/ai_safety_radar/utils/: llm_client.py  logging.py  redis_client.py  secrets.py
tests/: test_config.py
tests/agents/: test_error_handling.py  test_extraction_agent.py  test_filter_agent.py  test_filter_logic.py
tests/fixtures/: papers.py
tests/integration/: test_pipeline.py
tests/security/: test_airgap.py
